apps/semaphore/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore-http
  labels:
    app.kubernetes.io/name: semaphore
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: semaphore
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
