apps/semaphore/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app.kubernetes.io/name: semaphore
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://semaphore.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Ansible and automation UI
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: semaphore.png
    gethomepage.dev/name: Semaphore
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`semaphore.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: semaphore
          port: http
  tls: {}
